--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-      <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='cart.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
+    {% block styles %}
+    <!-- Дополнительные стили для конкретной страницы (например, карточки товаров) -->
+    {% endblock %}
 </head>
 <body>
     <header>
             <div class="container">
-                <div class="logo">Мой Логотип</div>
+                <div class="logo">IStore</div>
                 <nav>
                     <ul>
-                        <li><a href="#">Главная</a></li>
-                        <li><a href="#">О нас</a></li>
+                        <li><a href="{{ url_for('index') }}">Главная</a></li>
+                        <li><a href="/about">О нас</a></li>
                         <li><a href="#">Услуги</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
@@ -20,5 +26,6 @@
             </div>
     </header>
  <main>{% block content %}{% endblock %}</main>
+ {% block scripts %}{% endblock %}
 </body>
 </html>
