--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='admin.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='cart.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cart.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
     {% block styles %}
     <!-- Дополнительные стили для конкретной страницы (например, карточки товаров) -->
@@ -13,19 +13,31 @@
 </head>
 <body>
     <header>
-            <div class="container">
-                <div class="logo">IStore</div>
-                <nav>
-                    <ul>
-                        <li><a href="{{ url_for('index') }}">Главная</a></li>
-                        <li><a href="/about">О нас</a></li>
-                        <li><a href="#">Услуги</a></li>
-                        <li><a href="#">Контакты</a></li>
-                    </ul>
-                </nav>
-            </div>
+        <div class="container">
+            <div class="logo">IStore</div>
+            <nav>
+                <ul class="nav-list">
+                    <li><a href="{{ url_for('index') }}">Главная</a></li>
+                    <li><a href="/about">О нас</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <!-- Кнопка для мобильного меню -->
+            <button class="menu-toggle" id="menu-toggle">☰</button>
+        </div>
     </header>
- <main>{% block content %}{% endblock %}</main>
- {% block scripts %}{% endblock %}
+    <main>{% block content %}{% endblock %}</main>
+    {% block scripts %}
+    <script>
+        // JavaScript для переключения мобильного меню
+        const menuToggle = document.getElementById('menu-toggle');
+        const navList = document.querySelector('.nav-list');
+
+        menuToggle.addEventListener('click', () => {
+            navList.classList.toggle('active');
+        });
+    </script>
+    {% endblock %}
 </body>
 </html>
